# hdx-data-freshness

./: .coveragerc  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README.rst  Results.txt  crontab  database.env  docker-compose.yml  docker-requirements.txt  freshness.py  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  retrieval.py  retry.py  run.py  runfreshness.sh  setup.cfg  setup.py  test-requirements.txt
.config/: pre-commit-config.yaml
.github/workflows/: build.yml  publish.yaml  publish.yml  run-python-tests.yaml  run-python-tests.yml
config/: project_configuration.yml
database/: base.py  dbdataset.py  dbinfodataset.py  dborganization.py  dbresource.py  dbrun.py
doc/: main.md
docker/db-opt/: bootstrap_postgres.sh
docs/: main.md
documentation/: main.md  pydoc-markdown.yaml
freshness/: __main__.py  freshness.py  retrieval.py  retry.py  run.py
freshness/database/: base.py  dbrun.py
src/freshness/: __main__.py  datafreshness.py  project_configuration.yml  retrieval.py  retry.py
src/freshness/database/: dbdataset.py  dbinfodataset.py  dborganization.py  dbresource.py
src/hdx/freshness/: __main__.py  datafreshness.py  ratelimiter.py  retrieval.py  retry.py  version.py
src/hdx/freshness/app/: __main__.py  datafreshness.py  project_configuration.yaml
src/hdx/freshness/database/: __init__.py  base.py  dbdataset.py  dbinfodataset.py  dborganization.py  dbresource.py  dbrun.py
src/hdx/freshness/dbactions/: __main__.py  dbclean.py  dbclone.py
src/hdx/freshness/testdata/: dbtestdataset.py  dbtestdate.py  dbtesthashresult.py  dbtestresource.py  dbtestresult.py  (+2 more)
stack/: .common.yml  .env.example  crontab  docker-compose.yaml  docker-compose.yml  logrotate  rundbbackup.sh  runemail.sh  runfresh.sh
stack/postgres-init/: init-datadir.sh
tests/: test_aging.py  test_freshness.py  test_freshness_day0.py  test_freshness_day1.py  test_freshness_dayN.py  test_retrieval.py
tests/fixtures/: datasets.pickle
tests/fixtures/day0/: datasets.db  hash_results.pickle  now.pickle  results.pickle  test_freshness.db  test_serialize.db
tests/fixtures/day1/: hash_results.pickle  now.pickle  results.pickle
tests/fixtures/dayN/: hash_results.pickle  now.pickle  results.pickle  test_freshness.db  test_serialize.db
tests/fixtures/dbactions/: runs.csv  runs2.csv  runs3.csv  runs4.csv  runs5.csv  runs_broken1351.csv  test_freshness.db  test_freshness_brokenrun1351.db
tests/fixtures/emailer/: curators.csv  curators_multipleowners.csv  datagrids.csv  dutyroster.csv  project_configuration.yaml  project_configuration.yml  project_configuration_multiple.yaml
tests/fixtures/retrieve/: ACLED-Country-Coverage-and-ISO-Codes_8.2019.xlsx  COD_MOZ_Admin0.geojson  Dataset.csv  hrp_adm1_4pc.geojson  list_one.xls  response.html
tests/freshness/: conftest.py  test_aging.py  test_freshness_day0.py  test_freshness_dayN.py  test_retrieval.py
tests/hdx/freshness/: conftest.py  test_aging.py  test_freshness_CKAN.py  test_freshness_day0.py  test_freshness_dayN.py  test_process_results.py  test_retrieval.py  test_serialize.py
(+23 files in other folders)
